Initial code drop for perf-events branch

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,6 +19,7 @@ SUBDIRS = \
 	events \
 	doc \
 	gui \
+	pe_profiling \
 	agents
 #### ATTENTION ####
 #    The agents directory must be kept as the last subdir
