Update perf-events branch to match patchset posted to oprofile-list on Feb 23

--- a/pe_profiling/Makefile.am
+++ b/pe_profiling/Makefile.am
@@ -10,22 +10,21 @@ AM_CPPFLAGS = \
 	-I ${top_srcdir}/libdb \
 	-I ${top_srcdir}/pe_profiling
 
-# 	-I ${top_srcdir}/daemon
-
 operf_SOURCES = operf.cpp \
 	operf.h \
-	operf_utils.cpp \
-	operf_counter.cpp \
-	operf_counter.h \
 	operf_event.h \
+	operf_utils.cpp \
+	operf_counter.h \
+	operf_counter.cpp \
 	operf_process_info.h \
 	operf_process_info.cpp \
-	operf_sfile.cpp \
-	operf_sfile.h \
-	operf_kernel.h \
 	operf_kernel.cpp \
+	operf_kernel.h \
+	operf_mangling.cpp \
 	operf_mangling.h \
-	operf_mangling.cpp
+	operf_sfile.cpp \
+	operf_sfile.h
+
 
 AM_CXXFLAGS = @OP_CXXFLAGS@
 bin_PROGRAMS = operf
@@ -35,7 +34,5 @@ operf_LDADD =	../libopt++/libopt++.a \
 	../libop/libop.a \
 	../libutil/libutil.a \
 	../libabi/libabi.a
-
-#operf_LINK = $(CXX) $(AM_CXXFLAGS) $(AM_CPPFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
 
 endif
