New man page for operf command.

--- a/configure.in
+++ b/configure.in
@@ -357,6 +357,7 @@ AC_OUTPUT(Makefile \
 	doc/opgprof.1 \
 	doc/oparchive.1 \
 	doc/opimport.1 \
+	doc/operf.1 \
 	doc/srcdoc/Doxyfile \
 	libpp/Makefile \
 	opjitconv/Makefile \
