Refactored some code into a library for use by both operf and (in future) oprofile daemon

--- a/configure.in
+++ b/configure.in
@@ -326,6 +326,7 @@ AC_SUBST(OP_DOCDIR)
 
 AC_OUTPUT(Makefile \
 	pe_profiling/Makefile \
+	libperf_events/Makefile \
 	m4/Makefile \
 	libutil/Makefile \
 	libutil/tests/Makefile \
