Minor bug fixes and performance improvement for system-wide mode.
The operf_sfile hashing algorithm was modified from legacy hashing
to use either a build-id or a checksum.  I had not yet implemented the
getting the build-id, so was falling back to the checksum.  Getting
the checksum (via gelf_checksum) was terribly expensive, especially
noticeable when running with the system-wide option.  So I spent
some time comparing using a build-id (obtained from the binary file's
NT_GNU_BUILD_ID note) for the hashing algorithm versus simply hashing
on a substring of the image name.  The simple string hash was as
effective as the build-id method.  Both were way better than the checksum
technique. In the end, I removed all of the checksum and build-id stuff,
and settled on the image name string hash method for finding operf_sfiles.

Aside from the above big performance improvement described above, I also
created a global multimap for holding operf_mmap objects.  The operf_mmap
encapsulates an MMAP event.  In system-wide mode, we get lots of MMAP events
for the same libraries being used by many different processes, so it was
logical to create just one operf_mmap object per unique binary.

--- a/doc/operf.1.in
+++ b/doc/operf.1.in
@@ -47,12 +47,26 @@ be used simultaneously.
 .TP
 .BI "--pid / -p [PID]"
 This option enables operf to profile a running application. <PID>
-should be the process ID of the process you wish to profile.
+should be the process ID of the process you wish to profile.  When
+finished profiling (e.g., when the profiled process ends), press
+Ctrl-c to stop operf.
 .br
 .TP
 .BI "--system-wide / -s"
 This option is for performing a system-wide profile.  You must
-have root authority to run operf in this mode.  It is recommended
+have root authority to run operf in this mode.  When finished profiling,
+Ctrl-c to stop operf. If you run
+.BI operf
+.BI --system-wide
+as a background job (i.e., with the &), you
+.B must
+stop it in a controlled manner in order for it to process the profile
+data it has collected.  Use
+.BI kill
+.BI -SIGINT
+.BI <operf-PID>
+for this purpose.
+It is recommended
 that when running operf with this option, the user's current working
 directory should be /root or a subdirectory of /root to avoid
 storing sample data files in locations accessible by regular users.
