--- a/pe_profiling/Makefile.am
+++ b/pe_profiling/Makefile.am
@@ -1,4 +1,4 @@
-LIBS=@POPT_LIBS@ @LIBERTY_LIBS@ @ELF_LIB@ @PFM_LIB@
+LIBS=@POPT_LIBS@ @LIBERTY_LIBS@ @PFM_LIB@
 if BUILD_FOR_PERF_EVENT
 
 AM_CPPFLAGS = \
