Switch operf from popt to getopt
Using popt to parse command line arguments for operf did not
work properly for cases where an application to profile is
passed in, along with some app arguments that happen to have
option names the same as operf.  Therefore, operf has been
changed to use getopt_long.  This decision to not use popt
negated the reason for the changes made to oprofile's libopt++
popt_option.[c|h] files back when operf was first introduced;
thus, those changes are reverted with this patch.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/pe_profiling/Makefile.am
+++ b/pe_profiling/Makefile.am
@@ -4,7 +4,6 @@ if BUILD_FOR_PERF_EVENT
 AM_CPPFLAGS = \
 	-I ${top_srcdir}/libutil \
 	-I ${top_srcdir}/libop \
-	-I ${top_srcdir}/libopt++ \
 	-I ${top_srcdir}/libutil++ \
 	-I ${top_srcdir}/libperf_events
 
@@ -12,8 +11,7 @@ operf_SOURCES = operf.cpp
 
 AM_CXXFLAGS = @OP_CXXFLAGS@
 bin_PROGRAMS = operf
-operf_LDADD =	../libopt++/libopt++.a \
-	../libperf_events/libperf_events.a \
+operf_LDADD =	../libperf_events/libperf_events.a \
 	../libutil++/libutil++.a \
 	../libdb/libodb.a \
 	../libop/libop.a \
