Add reporting of profiling statistics to operf.
This patch adds the recording of the following stats:

OPERF_SAMPLES, /**< nr. samples */
OPERF_KERNEL, /**< nr. kernel samples */
OPERF_PROCESS, /**< nr. userspace samples */
OPERF_INVALID_CTX, /**< nr. samples lost due to sample address not in expected range for domain */
OPERF_LOST_KERNEL,  /**< nr. kernel samples lost */
OPERF_LOST_SAMPLEFILE, /**< nr samples for which sample file can't be opened */
OPERF_LOST_NO_MAPPING, /**< nr samples lost due to no mapping */
OPERF_NO_APP_KERNEL_SAMPLE, /**<nr. user ctx kernel samples dropped due to no app context available */
OPERF_NO_APP_USER_SAMPLE, /**<nr. user samples dropped due to no app context available */
OPERF_BT_LOST_NO_MAPPING, /**<nr. backtrace samples dropped due to no mapping */
OPERF_LOST_INVALID_HYPERV_ADDR, /**<nr. hypervisor samples dropped due to address out-of-range */
OPERF_RECORD_LOST_SAMPLE, /**<nr. samples lost reported by perf_events kernel */

At the completion of a profiling run, these stats are written to the
operf.log file (new in this patch) at <session_dir>/samples.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/doc/operf.1.in
+++ b/doc/operf.1.in
@@ -1,5 +1,6 @@
 .\" Manpage for operf
 .\" Author: Breno Leitao <brenohl@br.ibm.com>
+.\" Modifications: Maynard Johnson <maynardj@us.ibm.com>
 .TH OPERF 1 "@DATE@" "oprofile @VERSION@"
 .SH NAME
 operf \- Performance profiler tool for Linux
@@ -16,8 +17,8 @@ Operf is an OProfile tool that can be used in place of opcontrol for profiling. 
 uses the Linux Performance Events Subsystem, and hence, does not require the use of
 the opcontrol daemon -- in fact, operf and opcontrol usage are mutually exclusive.
 .P
-By default, operf stores profiling data in <current_dir>/oprofile_data.  You can change
-this by way of the
+By default, operf uses <current_dir>/oprofile_data as the session-dir and stores profiling data there.
+You can change this by way of the
 .I --session-dir
 option.
 .P
@@ -25,7 +26,9 @@ The usual post-profiling analysis tools such as
 .BI opreport(1)
 and
 .BI opannotate(1)
-can be used to generate profile reports.
+can be used to generate profile reports.  Statistics, such as total samples received
+and lost samples, are written to the operf.log file that can be found in the
+<session_dir>/samples directory.
 .br
 
 .SH OPTIONS
