Make opreport use <cur_dir>/oprofile data for default session-dir
Since operf will be the recommended profiling tool in the future
(instead of opcontrol) and since operf stores the sample data by
default in <cur_dir>/oprofile_data, it makes sense for opreport
and other oprofile post-processing tools to look first in
<cur_dir/oprofile_data; then, if no samples are found there, the
tool should fall back to the "standard" /var/lib/oprofile session-dir.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/doc/oparchive.1.in
+++ b/doc/oparchive.1.in
@@ -34,7 +34,13 @@ Give verbose debugging output.
 .br
 .TP
 .BI "--session-dir="dir_path
-Use sample database out of directory dir_path instead of the default location (/var/lib/oprofile).
+Use sample database from the specified directory
+.I dir_path
+instead of the default locations. If
+.I --session-dir
+is not specified, then opreport will search for samples in
+.I <current_dir>/oprofile_data
+first; then, if no samples found there, it will look in /var/lib/oprofile.
 .br
 .TP
 .BI "--image-path / -p [paths]"
@@ -63,9 +69,15 @@ Only list the files that would be archived, don't copy them.
 No special environment variables are recognised by oparchive.
 
 .SH FILES
-.TP
+.I <current_dir>/oprofile_data/samples
+.RS 7
+Or
+.RE
 .I /var/lib/oprofile/samples/
+.LP
+.RS 7
 The location of the generated sample files.
+.RE
 
 .SH VERSION
 .TP
