--- a/doc/opreport.1.in
+++ b/doc/opreport.1.in
@@ -90,7 +90,13 @@ Reverse the sort from the default.
 .br
 .TP
 .BI "--session-dir="dir_path
-Use sample database out of directory dir_path instead of the default location (/var/lib/oprofile).
+Use sample database from the specified directory
+.I dir_path
+instead of the default locations. If
+.I --session-dir
+is not specified, then opreport will search for samples in
+.I <current_dir>/oprofile_data
+first; then, if no samples found there, it will look in /var/lib/oprofile.
 .br
 .TP
 .BI "--show-address / -w"
@@ -124,12 +130,18 @@ Show version.
 Generate XML output.
 
 .SH ENVIRONMENT
-No special environment variables are recognised by opreport.
+No special environment variables are recognized by opreport.
 
 .SH FILES
-.TP
+.I <current_dir>/oprofile_data/samples
+.RS 7
+Or
+.RE
 .I /var/lib/oprofile/samples/
+.LP
+.RS 7
 The location of the generated sample files.
+.RE
 
 .SH VERSION
 .TP
