Add --with-kernel configure option to specify location of kernel headers
This new configure option can be useful in cross-compile environments or
other situations where the host system does not support perf_events but
the user wants to build binaries for a target system that does support
perf_events.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>
Signed-off-by: Balazs Kilvady <kilvadyb@homejinni.com>
Signed-off-by: Gergely Kis <gergely@homejinni.com>

--- a/pe_profiling/Makefile.am
+++ b/pe_profiling/Makefile.am
@@ -1,11 +1,12 @@
-LIBS=@POPT_LIBS@ @LIBERTY_LIBS@ @PFM_LIB@
+LIBS=@LIBERTY_LIBS@ @PFM_LIB@
 if BUILD_FOR_PERF_EVENT
 
 AM_CPPFLAGS = \
 	-I ${top_srcdir}/libutil \
 	-I ${top_srcdir}/libop \
 	-I ${top_srcdir}/libutil++ \
-	-I ${top_srcdir}/libperf_events
+	-I ${top_srcdir}/libperf_events \
+	@PERF_EVENT_FLAGS@
 
 operf_SOURCES = operf.cpp
 
