--- a/configure.in
+++ b/configure.in
@@ -63,8 +63,22 @@ AC_PROG_CXX
 AC_CHECK_PROG(LD,ld,ld,)
 test "$LD" || AC_ERROR(ld not found)
 
+# --with-kernel for cross compilation
+AC_ARG_WITH(kernel,
+[AS_HELP_STRING([--with-kernel=dir], [Path to kernel include directory (...include/linux/perf_event.h) to use.
+If this option is not specified, configure will look for kernel header files in the usual installation location
+for a kernel-headers package -- /usr/include. Use this option in cross-compile enviroments
+or in situations where the host system does not support perf_events but you wish to build binaries
+for a target system that does support perf_events.
+The kernel headers used should match the version of the target system.])],
+KERNELDIR=$withval)
+
+
 dnl Check kernel version for perf_events supported
 AC_MSG_CHECKING([kernel version supports perf_events])
+if test "$KERNELDIR" != ""; then
+	KINC="$KERNELDIR/include"
+fi
 AX_KERNEL_VERSION(2, 6, 31, <=, kernel_has_perf_events_support="yes",
 kernel_has_perf_events_support="no")
 
@@ -74,10 +88,19 @@ else
 	AC_MSG_RESULT([This kernel has perf_events support])
 fi
 
-AC_CHECK_FILE("/usr/include/linux/perf_event.h",PERF_EVENT_H_EXISTS="yes")
+if test "$KERNELDIR" == ""; then
+	PERF_EVENT_H="/usr/include/linux/perf_event.h"
+else
+	PERF_EVENT_H="$KERNELDIR/include/linux/perf_event.h"
+fi
+AC_CHECK_HEADER($PERF_EVENT_H,PERF_EVENT_H_EXISTS="yes")
 AM_CONDITIONAL(BUILD_FOR_PERF_EVENT, test -n "$PERF_EVENT_H_EXISTS")
 if test "$PERF_EVENT_H_EXISTS" = "yes"; then
 	HAVE_PERF_EVENTS='1'
+	if test "$KERNELDIR" != ""; then
+		PERF_EVENT_FLAGS=" -I$KERNELDIR/include"
+		AC_SUBST(PERF_EVENT_FLAGS)
+	fi
 else
 	HAVE_PERF_EVENTS='0'
 fi
