--- a/configure.in
+++ b/configure.in
@@ -153,6 +153,7 @@ ORIG_SAVE_LIBS="$LIBS"
 dnl advanced glibc features which we need but may not be present
 AC_CHECK_FUNCS(sched_setaffinity perfmonctl)
 
+AC_CHECK_LIB(popt, poptGetContext,, AC_MSG_ERROR([popt library not found]))
 AX_BINUTILS
 AX_CELL_SPU
 
