Fix configure to not alter user variables and remove non-working --with-gcc option
The configure script for oprofile had a few places
where user variables were being altered in contradiction
to the GNU Automake manual.  See the following URL for details:

http://www.gnu.org/software/automake/manual/html_node/Flag-Variables-Ordering.html

In brief, user variables are those listed under "Some influential
environment variables" section of the output from 'configure --help'.
These are variables which the user may set prior to invoking configure,
and thus, the configure script should not alter them.  This patch
makes use of new internal variables (e.g., OP_LDFLAGS and OP_CPPFLAGS),
which did unfortunately create quite a ripple effect with the Makefile.am
files.  But this was unavoidable in order to correct this error.

Additionally, the '--with-gcc' option does not work anymore because
the generated configure script runs the AC_PROG_CC before processing the
"--with-gcc" option, so it fails to find a compiler.  Unsure of when
this stopped working (assume it must have worked in 2005 when it was
initially added), but even fairly old distros (e.g., SLES 10) with
autoconf version 2.59 do not process this option as we would want.
If users wish to configure oprofile to use an alternate compiler,
they should pass the compiler pathnames on the configure command line, thusly:
     ./configure CC=/my-gcc-install/bin/gcc CXX=/my-gcc-instal/g++

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/configure.in
+++ b/configure.in
@@ -24,21 +24,17 @@ dnl for the man page
 DATE="`date '+%a %d %B %Y'`"
 AC_SUBST(DATE)
 
-# this needs to come before --with-gcc so we link with binutil's version
-# of libiberty ... sigh
+# Since we should not permanently alter user environment variables, we'll
+# save the contents of the original flags in case the user has set them
+# prior to running this configue script.
+CPPFLAGS_SAVE="$CPPFLAGS"
+LDFLAGS_SAVE="$LDFLAGS"
 AC_ARG_WITH(binutils,
 [  --with-binutils=dir		Path to binutils installation to use], BINUTILSDIR=$withval)
 
 if test "$BINUTILSDIR" != ""; then
 	LD="$BINUTILSDIR/ld"
-	if test "$CFLAGS" = ""; then
-		CFLAGS="-g -O2"
-	fi
-	if test "$CXXFLAGS" = ""; then
-		CXXFLAGS="-g -O2"
-	fi
-	CFLAGS="$CFLAGS -I$BINUTILSDIR/include"
-	CXXFLAGS="$CXXFLAGS -I$BINUTILSDIR/include"
+	CPPFLAGS="$CPPFLAGS -I$BINUTILSDIR/include"
 	AC_ARG_WITH(binutils-libname,
 		[  --with-binutils-libname       Lib dir name under binutils installation; @<:@lib@:>@]],
 		BINUTILSLIB=$withval)
@@ -46,16 +42,15 @@ if test "$BINUTILSDIR" != ""; then
 		BINUTILSLIB="lib"
 	fi
 	LDFLAGS="$LDFLAGS -L$BINUTILSDIR/$BINUTILSLIB -Xlinker -R -Xlinker $BINUTILSDIR/$BINUTILSLIB"
+	OP_LDFLAGS="$LDFLAGS"
+	OP_CPPFLAGS="$CPPFLAGS"
+else
+	OP_LDFLAGS=
+	OP_CPPFLAGS=
 fi
 
-AC_ARG_WITH(gcc,
-[  --with-gcc=dir		Path to GCC installation to use], GCCDIR=$withval)
-
-if test "$GCCDIR" != ""; then
-	CC="$GCCDIR/bin/gcc"
-	CXX="$GCCDIR/bin/g++"
-	LDFLAGS="$LDFLAGS -L$GCCDIR/lib -Xlinker -R -Xlinker $GCCDIR/lib"
-fi
+# We can't restore original flag values for CPPFLAGS and LDFLAGS until we're done
+# checking for bfd.h and libiberty.h (in AX_BINUTILS).
 
 AC_PROG_CC
 AC_PROG_CPP
@@ -155,6 +150,13 @@ AC_CHECK_FUNCS(sched_setaffinity perfmonctl)
 
 AC_CHECK_LIB(popt, poptGetContext,, AC_MSG_ERROR([popt library not found]))
 AX_BINUTILS
+# Now we can restore original flag values, and may as well do the
+# AC_SUBST, too.
+CPPFLAGS="$CPPFLAGS_SAVE"
+LDFLAGS="$LDFLAGS_SAVE"
+AC_SUBST(OP_CPPFLAGS)
+AC_SUBST(OP_LDFLAGS)
+
 AX_CELL_SPU
 
 # C++ tests
