--- a/libutil++/Makefile.am
+++ b/libutil++/Makefile.am
@@ -3,7 +3,8 @@ SUBDIRS = . tests
 AM_CPPFLAGS= \
 	-I ${top_srcdir}/libutil \
 	-I ${top_srcdir}/libop \
-	-I ${top_srcdir}/libpp
+	-I ${top_srcdir}/libpp \
+	@OP_CPPFLAGS@
 
 AM_CXXFLAGS = @OP_CXXFLAGS@
 
