--- a/libpp/Makefile.am
+++ b/libpp/Makefile.am
@@ -5,7 +5,8 @@ AM_CPPFLAGS = \
 	-I ${top_srcdir}/libopt++ \
 	-I ${top_srcdir}/libutil++ \
 	-I ${top_srcdir}/libop++ \
-	-I ${top_srcdir}/libregex
+	-I ${top_srcdir}/libregex \
+	@OP_CPPFLAGS@
 
 AM_CXXFLAGS = @OP_CXXFLAGS@
 
