--- a/opjitconv/Makefile.am
+++ b/opjitconv/Makefile.am
@@ -1,5 +1,10 @@
-AM_CPPFLAGS = -I ${top_srcdir}/libopagent  -I ${top_srcdir}/libutil -I ${top_srcdir}/daemon
+AM_CPPFLAGS = -I ${top_srcdir}/libopagent  \
+	-I ${top_srcdir}/libutil \
+	-I ${top_srcdir}/daemon \
+	@OP_CPPFLAGS@
+
 AM_CFLAGS = @OP_CFLAGS@
+AM_LDFLAGS = @OP_LDFLAGS@
 
 bin_PROGRAMS = opjitconv
 
