[PATCH] Add some helpful messages for various operf usage scenarios
Added the folowing helpful messages:
  - Display message in opreport (and other pp tools) to show session dir used.
  - When using operf with "-p" or "-s", print message that user can do "ctrl-C"
    or "kill SIGINT <operf_PID> " to stop profiling.  The "kill" command is mainly
    needed in the case where operf is made a background job via the '&'.
  - Display a message when a permissions error is encountered when trying to mmap
    the kernel profile data.  This can happen when a given user tries to run multiple
    instances of operf simultaneously. This problem is fixed on newer kernels (e.g., 3.0).
  - For 'operf --system-wide', print a message that either the user needs to be root or
    the perf_event_paranoid system value must be 0 or -1.  Of course, the message is
    printed only if neither of these are true.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/doc/operf.1.in
+++ b/doc/operf.1.in
@@ -56,7 +56,17 @@ This option enables operf to profile a running application.
 .I PID
 should be the process ID of the process you wish to profile.  When
 finished profiling (e.g., when the profiled process ends), press
-Ctrl-c to stop operf.
+Ctrl-c to stop operf. If you run
+.BI operf
+.BI --pid
+as a background job (i.e., with the &), you
+.B must
+stop it in a controlled manner in order for it to process the profile
+data it has collected.  Use
+.BI kill
+.BI -SIGINT
+.BI <operf-PID>
+for this purpose.
 .br
 .TP
 .BI "--system-wide / -s"
